src/np222kk/dv507/a2/test/cases/negative/test_neg_declaration_03.ofp
void main() {
    int i = "a";
}